@@ -16,6 +16,7 @@ For a list of compatibility related changes see the UPGRADE file.
 Version <release> released on <releaseDate>
 
 Enhancements
+ * Localized remediation templates (if a localized version exists, it'll override the default)
  * More documentation for service watch
  * Eliminated some unncessary warnings
  * Better help in the web admin UI
